--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babelify": "^8.0.0",
     "browser-sync": "^2.18.13",
     "browserify": "^16.1.1",
+    "bulkify": "^1.4.2",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
