--- a/package.json
+++ b/package.json
@@ -1,51 +1,31 @@
 {
-  "name": "khejit-boilerplate",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.html",
+  "name": "log-scrobbler",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "khejit",
-  "license": "ISC",
-  "browser": {
-    "vue": "vue/dist/vue.common.js"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.0.0-beta.42",
-    "babel-core": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babelify": "^8.0.0",
-    "browser-sync": "^2.18.13",
-    "browserify": "^16.1.1",
-    "bulkify": "^1.4.2",
-    "del": "^3.0.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.0.0",
-    "gulp-babel": "^8.0.0-beta.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-concat-css": "^2.3.0",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-imagemin": "^3.3.0",
-    "gulp-inject-svg": "^0.1.15",
-    "gulp-rename": "^1.2.2",
-    "gulp-run-sequence": "^0.3.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.1",
-    "gulp-svgstore": "^6.1.0",
-    "gulp-uglify": "^3.0.0",
-    "gulp-util": "^3.0.8",
-    "gulp-watch": "^4.3.11",
-    "imagemin-guetzli": "^1.0.0",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "bulma": "^0.7.1",
-    "bulma-extensions": "^2.2.1",
-    "connect-history-api-fallback": "^1.5.0",
+    "bulma": "^0.7.2",
+    "bulma-extensions": "^4.0.1",
     "lastfmapi": "^0.1.1",
-    "vue": "^2.5.16",
-    "vue-router": "^3.0.1"
+    "lodash": "^4.17.11",
+    "vue": "^2.5.22",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^3.3.0",
+    "@vue/cli-plugin-unit-mocha": "^3.3.0",
+    "@vue/cli-service": "^3.3.0",
+    "@vue/test-utils": "^1.0.0-beta.20",
+    "bulk-require": "^1.0.1",
+    "chai": "^4.1.2",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "vue-template-compiler": "^2.5.21",
+    "webpack": "^4.29.0"
   }
 }
