--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bulma-extensions": "^4.0.1",
     "lastfmapi": "^0.1.1",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "vue": "^2.5.22",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
