--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "bulma": "^0.7.2",
-    "bulma-extensions": "^4.0.1",
-    "lastfmapi": "^0.1.1",
+    "buefy": "^0.8.20",
+    "lastfm-api-client": "^0.1.0",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "vue": "^2.5.22",
