--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "buefy": "^0.8.20",
-    "lastfm-api-client": "^0.1.0",
+    "lastfmapi": "^0.1.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "vue": "^2.5.22",
