--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.27.0",
     "vue": "^2.5.22",
     "vue-router": "^3.0.1",
+    "vuesax": "^4.0.1-alpha.22",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
