--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -19,7 +19,8 @@ jobs:
 
     - name: Build
       run: |
-        yarn build
+        npm install
+        npm run-script build
       env:
         LASTFM_API_KEY: ${{ secrets.LASTFM_API_KEY }}
         LASTFM_API_SECRET: ${{ secrets.LASTFM_API_SECRET }}
