Working percent indicator of sent scrobbles

--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -22,8 +22,8 @@ jobs:
         npm install
         npm run-script build
       env:
-        LASTFM_API_KEY: ${{ secrets.LASTFM_API_KEY }}
-        LASTFM_API_SECRET: ${{ secrets.LASTFM_API_SECRET }}
+        VUE_APP_LASTFM_API_KEY: ${{ secrets.LASTFM_API_KEY }}
+        VUE_APP_LASTFM_API_SECRET: ${{ secrets.LASTFM_API_SECRET }}
 
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@3.6.2
