--- a/package.json
+++ b/package.json
@@ -8,25 +8,24 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "buefy": "^0.8.20",
     "lastfmapi": "git+https://git@github.com/khejit/node-lastfmapi.git",
-    "lodash": "^4.17.11",
-    "moment": "^2.27.0",
-    "vue": "^2.5.22",
-    "vue-router": "^3.0.1",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
+    "vue": "^2.6.12",
+    "vue-router": "^3.5.1",
     "vuesax": "^4.0.1-alpha.22",
-    "vuex": "^3.0.1"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.3.0",
-    "@vue/cli-plugin-unit-mocha": "^3.3.0",
-    "@vue/cli-service": "^3.3.0",
-    "@vue/test-utils": "^1.0.0-beta.20",
+    "@vue/cli-plugin-babel": "^4.5.11",
+    "@vue/cli-plugin-unit-mocha": "^4.5.11",
+    "@vue/cli-service": "^4.5.11",
+    "@vue/test-utils": "^1.1.3",
     "bulk-require": "^1.0.1",
-    "chai": "^4.1.2",
+    "chai": "^4.3.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
-    "vue-template-compiler": "^2.5.21",
-    "webpack": "^4.29.0"
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^4.46.0"
   }
 }
