--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@4.1.0
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.ACCESS_TOKEN }}
         VUE_APP_LASTFM_API_KEY: ${{ secrets.LASTFM_API_KEY }}
         VUE_APP_LASTFM_API_SECRET: ${{ secrets.LASTFM_API_SECRET }}
         branch: gh-pages
