--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -15,16 +15,20 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2.3.1
 
+    - name: Store variables
+      run: |
+        touch .env
+        VUE_APP_LASTFM_API_KEY=${{ secrets.LASTFM_API_KEY }} >> .env
+        VUE_APP_LASTFM_API_SECRET=${{ secrets.LASTFM_API_SECRET }} >> .env
+
     - name: Build
       run: |
         npm install
-        npm run build
+        npm run-scripts build
 
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@4.1.0
       with:
         token: ${{ secrets.ACCESS_TOKEN }}
-        VUE_APP_LASTFM_API_KEY: ${{ secrets.LASTFM_API_KEY }}
-        VUE_APP_LASTFM_API_SECRET: ${{ secrets.LASTFM_API_SECRET }}
         branch: gh-pages
         folder: dist
