--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Build
       run: |
         npm install
-        npm run-scripts build
+        npm run-script build
 
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@4.1.0
